# gentestaiken

./: LICENSE  README.md  gentestaiken.cabal
app/: Main.hs  Params.hs
lib/: Question.hs
tests/: test.aiken
